discription for world federico

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -122,7 +122,8 @@
                         {{ 'WORLD_BESTGUESS' | translate }}
                       </li>
                        <li id="worldfederico" class="slPara">
-                        {{ 'WORLD_FEDERICO' | translate }}
+                        {{ 'WORLD_FEDERICO' | translate }},  
+                        <a href="http://www.ehes.org/EHES_93.pdf">“World trade, 1800-1938: a new data-set”, EHES Working paper 93</a>
                       </li>
                     </ul>
                     <p class="slPara">
