--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -233,14 +233,15 @@
       <br/>
       <br/>
       <h4 class="titleDualTL">{{ 'LINE_CHART_1' | translate }} {{entities.sourceEntity.selected.RICname}} {{ 'LINE_CHART_2' | translate }}
-      <span ng-repeat="elm in reporting" ng-click="removeReporting(elm)" ng-style="{color:elm.color}" >{{elm.RICname}}
-
-      <span class="close-btn">
-       <i class="fa fa-times-circle"></i>
-      </span>
-      <span ng-if="!$last">, </span>
-      </span>,
-      <br/>
+      <div class="inline-select">
+        <ui-select ng-model="entities.sourceCountryEntity1.selected" theme="bootstrap" ng-change="change(entities.sourceCountryEntity1.selected)">
+          <match placeholder="Partners" ng-style="{color:elm.color}"></match>
+          <choices repeat="item in RICentitiesDD | filter: $select.search">
+            <div ng-bind-html="item.display | highlight: $select.search"></div>
+          </choices>
+        </ui-select>
+      </div>
+      </br>
       {{selectedMinDate}} – {{selectedMaxDate}}, in
       <div class="inline-select">
         <ui-select ng-model="linechartCurrency" theme="bootstrap" ng-change="changeCurrency(linechartCurrency)">
@@ -259,20 +260,34 @@
         </choices>
       </ui-select>
     </div>
+    <div class="subtitle">{{'LINE_CHART_SELECT' | translate }} </div></br>
+    <span ng-repeat="elm in reporting" ng-click="removeReporting(elm)" ng-style="{color:elm.color}" >{{elm.display}}
+      <span class="close-btn">
+       <i class="fa fa-times-circle"></i>
+      </span>
+      <span ng-if="!$last">, </span>
+      </span>
+<!--     <div>
+      <span class="subtitle">{{ 'LINE_CHART_SELECT' | translate }} </span>
+      <span ng-repeat="elm in reporting" ng-click="removeReporting(elm)" ng-style="{color:elm.color}" >{{elm.RICname}}
+
+      <span class="close-btn">
+       <i class="fa fa-times-circle"></i>
+      </span>
+      <span ng-if="!$last">, </span>
+      </span>
+    </div> -->
       </h4>
         <div ng-show="messagePercent">
-         <p>
-             <a href="/#worldTrade">world sum partners</a>
-             {{entities.sourceEntity.selected.RICname}}
+         <p class="paragraphViz">
+             The percentages are based on<a href="/#worldTrade">world sum partners</a> of {{entities.sourceEntity1.selected.RICname}}
          </p>
         </div>
     </div>
   </div>
-  <div id="select-lineChart">
-    <div>
-      <h4 class="subtitle col-md-2" style="width:190px;">{{ 'LINE_CHART_SELECT' | translate }}</h4>
-    </div>
-  <div class="col-md-9">
+
+<div id="select-lineChart">
+ <!--  <div class="col-md-9">
 
     <div class="inline-select" >
       <ui-select   ng-model="entities.sourceCountryEntity.selected" theme="bootstrap"  ng-change="changeCountry(entities.sourceCountryEntity.selected)">
@@ -319,7 +334,7 @@
       </ui-select>
     </div>
 
-  </div>
+  </div> -->
 
   <div class="row">
     <div class="col-sm-12">
