--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -121,19 +121,19 @@
 
       <div class="inline-select" >
         <ui-select  ng-model="entities.sourceCountryEntity1.selected" theme="bootstrap" ng-change="change(entities.sourceCountryEntity1.selected)" >
-          <match placeholder="Country" ng-style="{color:elm.color}" ></match>
+          <match placeholder="Country"></match>
           <choices repeat="item in reportingCountryEntities1 | filter: $select.search">
             <div ng-bind-html="item.RICname | highlight: $select.search"></div>
           </choices>
         </ui-select>
-      </div> :
-      <span ng-repeat="elm in reporting" ng-click="removeReporting(elm)" ng-style="{color:elm.color}" >{{elm.RICname}}
+      </div>
+      <!-- <span ng-repeat="elm in reporting" ng-click="removeReporting(elm)" ng-style="{color:elm.color}" >{{elm.RICname}}
         <span class="close-btn">
           <i class="fa fa-times-circle"></i>
         </span>
         <span ng-if="!$last">, </span>
-      </span>
-      <br/>
+      </span> -->
+      </br>
       {{selectedMinDate}} – {{selectedMaxDate}}, in
       <div class="inline-select">
         <ui-select ng-model="linechartCurrency" theme="bootstrap" ng-change="changeCurrency(linechartCurrency)">
@@ -152,16 +152,23 @@
         </choices>
       </ui-select>
     </div>
+    <div class="subtitle">{{'LINE_CHART_SELECT' | translate }} </div></br>
+    <span ng-repeat="elm in reporting" ng-click="removeReporting(elm)" ng-style="{color:elm.color}" >{{elm.RICname}}
+      <span class="close-btn">
+       <i class="fa fa-times-circle"></i>
+      </span>
+      <span ng-if="!$last">, </span>
+      </span>
       </h4>
         <p class="paragraphViz">
           {{ 'WORLD_LINES_1' | translate }} 
           <a href="" ng-click="goTo('/#worldTrade')">World trade / Total trade</a> {{ 'WORLD_LINES_2' | translate }} <a href="" ng-click="goTo('/#worldTrade')">World best guess</a>
         </p>
-        <div ng-show="messagePercent">
+        <!-- <div ng-show="messagePercent">
          <p>
             The percentages are based on the total amount of <a href="/#worldTrade"> world bestguess</a> of {{entities.sourceEntity.selected.RICname}}
          </p>
-        </div>
+        </div> -->
     </div>
   </div>
   <div id="select-lineChart" >
