typo Federico-Tena

--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -47,6 +47,9 @@
             <div class="square worldestimate"></div> World Estimated
           </div>
           <div class="legend-item">
+            <div class="square worldfederico"></div> World Federico-Tena
+          </div>
+          <div class="legend-item">
             {{ 'CURRENCY' | translate }} <strong>sterling pound</strong>
           </div>
         </div>
