--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -38,6 +38,9 @@
         </reporting-world>
         <div class="legend">
         <div class="legend-item">
+            <div class="square worldbestguess"></div> World Best Guess
+          </div>
+        <div class="legend-item">
           <div class="square worldsum"></div> World Sum Partners
         </div>
           <div class="legend-item">
