description of mirror_rate

--- a/client/partials/matrix.html
+++ b/client/partials/matrix.html
@@ -99,10 +99,9 @@
 					<strong><u>{{ matrixColorBy.name.value}}</u>: </strong>{{"METADATA_MATRIX_INTRO_"+colorByIndex | translate}}</p>
 				</div>
 				<div ng-show="showBilateralTip">
-				      <div><strong>A:</strong> Number of partners reported by <strong>R</strong></div>
-				      <div><strong>B (mirror partners):</strong> Number of reporting which reports <strong>R</strong> as partner </div>
-				      <div><strong>M:</strong> Maximum number of mirror partners reported by a reporting/year</div>
-				      <div><strong>Mirror Rate: (B/A) x (B/M)</strong></div>
+				      <div><strong>Mirror Flow:</strong> Sum of Flow from mirror partner of <strong>R</strong> for certain year</div>
+				      <div><strong>World Best Guess Flow:</strong> Flow of World best guess of <strong>R</strong> for that year </div>
+				      <div><strong>Mirror Rate: Mirror Flow/World Best Guess Flow</strong></div>
 				</div>
 			</div>
 			
