fix linechartWorld color issue

--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -359,7 +359,8 @@
       ng-data="linechartData" 
       currency="linechartCurrency"
       start-date="selectedMinDate"
-      end-date="selectedMaxDate">
+      end-date="selectedMaxDate"
+      view="view">
       </linechart-world>
     </div>
   </div>
