--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -184,7 +184,8 @@
       ng-data="linechartData" 
       currency="linechartCurrency"
       start-date="selectedMinDate"
-      end-date="selectedMaxDate">
+      end-date="selectedMaxDate"
+      view="view">
       </linechart-world>
     </div>
   </div>
