--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -28,7 +28,7 @@
     <div class="col-md-12">
         <h4 class="titleDualTL">
         {{ 'COUNTRY_TITLE_1' | translate }}
-        <inline-select-country ng-model="entities.sourceEntity.selected" list="reportingEntities" ng-change="changeData()" ></inline-select-country>
+        <inline-select-country ng-model="entities.sourceEntity.selected" list="reportingEntities"></inline-select-country>
         {{ 'FROM' | translate }}
         <inline-select-year ng-model="selectedMinDate" list="rawYearsRange_forInf"></inline-select-year>
         {{ 'TO' | translate}}
