rollback mirror_rate definition to previous one

--- a/client/partials/matrix.html
+++ b/client/partials/matrix.html
@@ -99,9 +99,9 @@
 					<strong><u>{{ matrixColorBy.name.value}}</u>: </strong>{{"METADATA_MATRIX_INTRO_"+colorByIndex | translate}}</p>
 				</div>
 				<div ng-show="showBilateralTip">
-				      <div><strong>Mirror Flow:</strong> Sum of Flow from mirror partner of <strong>R</strong> for certain year</div>
-				      <div><strong>World Best Guess Flow:</strong> Flow of World best guess of <strong>R</strong> for that year </div>
-				      <div><strong>Mirror Rate: Mirror Flow/World Best Guess Flow</strong></div>
+				      <div><strong>Number of partner:</strong> total number of bilateral partners reported by <strong>R</strong> for the year</div>
+				      <div><strong>Number of mirror partner:</strong> number of bilateral partners reported by strong>R</strong> which report <strong>R</strong> as a partner of the year </div>
+				      <div><strong>Mirror Rate:</strong> Number of mirror partner/Number of partner</div>
 				</div>
 			</div>
 			
