--- a/client/partials/matrix.html
+++ b/client/partials/matrix.html
@@ -22,12 +22,16 @@
 				{{ 'METADATA_NBFLOW_INTRO' | translate }}
 			</p>
 			<div class="legend">
-		        <div class="legend-item">
+			 	<div class="legend-item">
+		            <div class="square bilateral"></div> Bilateral trade flows 
+		        </div>
+				<div class="legend-item">
 		          <div class="square world"></div> World trade flows
 		        </div>
-		          <div class="legend-item">
-		            <div class="square bilateral"></div> Bilateral trade flows 
-		          </div>
+		        <div class="legend-item">
+		          <div class="square federico"></div> FedericoTena trade flows
+		        </div>
+		       
 		    </div>
 			<number-flows
 				ng-data="nbFlows"
