--- a/client/partials/matrix.html
+++ b/client/partials/matrix.html
@@ -104,7 +104,7 @@
 				</div>
 				<div ng-show="showBilateralTip">
 				      <div><strong>Number of partner:</strong> total number of bilateral partners reported by <strong>R</strong> for the year</div>
-				      <div><strong>Number of mirror partner:</strong> number of bilateral partners reported by strong>R</strong> which report <strong>R</strong> as a partner of the year </div>
+				      <div><strong>Number of mirror partner:</strong> number of bilateral partners reported by <strong>R</strong> which report <strong>R</strong> as a partner of the year </div>
 				      <div><strong>Mirror Rate:</strong> Number of mirror partner/Number of partner</div>
 				</div>
 			</div>
