change mirror rate to mirror partner

--- a/client/partials/matrix.html
+++ b/client/partials/matrix.html
@@ -102,11 +102,11 @@
 					<br>
 					<strong><u>{{ matrixColorBy.name.value}}</u>: </strong>{{"METADATA_MATRIX_INTRO_"+colorByIndex | translate}}</p>
 				</div>
-				<div ng-show="showBilateralTip">
+				<!-- <div ng-show="showBilateralTip">
 				      <div><strong>Number of partner:</strong> total number of bilateral partners reported by <strong>R</strong> for the year</div>
 				      <div><strong>Number of mirror partner:</strong> number of bilateral partners reported by <strong>R</strong> which report <strong>R</strong> as a partner of the year </div>
 				      <div><strong>Mirror Rate:</strong> Number of mirror partner/Number of partner</div>
-				</div>
+				</div> -->
 			</div>
 			
 		    <reporting-synth
