--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -53,7 +53,7 @@
             <div class="square worldfederico"></div> World Federico-Tena
           </div>
           <div class="legend-item">
-            {{ 'CURRENCY' | translate }} <strong>sterling pound</strong>
+            {{ 'CURRENCY' | translate }} <strong>pound sterling</strong>
           </div>
         </div>
     </div>
@@ -89,7 +89,7 @@
             <div class="square export"></div> Export
           </div>
           <div class="legend-item">
-            {{ 'CURRENCY' | translate }} <strong>sterling pound</strong>
+            {{ 'CURRENCY' | translate }} <strong>pound sterling</strong>
           </div>
         </div>
       </div>
