--- a/client/partials/matrix.html
+++ b/client/partials/matrix.html
@@ -42,7 +42,7 @@
 		          <div class="square world"></div> World trade flows
 		        </div>
 		        <div ng-hide="bilateral" class="legend-item">
-		          <div class="square federico"></div> FedericoTena trade flows
+		          <div class="square federico"></div> Federico-Tena trade flows
 		        </div>
 		       
 		    </div>
