add federicotena datalink

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -123,7 +123,8 @@
                       </li>
                        <li id="worldfederico" class="slPara">
                         {{ 'WORLD_FEDERICO' | translate }},  
-                        <a href="http://www.ehes.org/EHES_93.pdf">“World trade, 1800-1938: a new data-set”, EHES Working paper 93</a>
+                        <a href="http://www.ehes.org/EHES_93.pdf">“World trade, 1800-1938: a new data-set”, EHES Working paper 93</a> |
+                        <a href="http://www.ehes.org/WP%20Statistical%20Appendix%20tables%20(%202016)2.xlsx">Excel Data</a>
                       </li>
                     </ul>
                     <p class="slPara">
