--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -204,7 +204,7 @@
             <p class="links" style="text-align:right; font-weight:bold;">
               Discover other medialab's tools on:
               <br>
-              <a href="http://www.tools.medialab.sciences-po.fr" class="pull-right">
+              <a href="http://tools.medialab.sciences-po.fr/" class="pull-right">
                 tools.medialab.sciences-po.fr
               </a>
             </p>
