add no bilateral modal checking for country view

--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -6,7 +6,7 @@
         There is <strong>no data available</strong> in the database for <strong>{{entities.sourceEntity.selected.RICname}}</strong>
      </p>
      <p>
-     between <strong>{{selectedMinDate}}</strong> and {{selectedMaxDate}}
+     between <strong>{{selectedMinDate}}</strong> and <strong>{{selectedMaxDate}}</strong>
      </p>
       <p>
         Choose another one or change date selection, thank you !
