adapt to new metadata layout

--- a/client/partials/bilateral.html
+++ b/client/partials/bilateral.html
@@ -53,7 +53,9 @@
     <p class="paragraphPage">
     </br>
     </br>
-      {{ 'BILATERAL_VIEW_INTRO' | translate }}
+      {{ 'BILATERAL_VIEW_INTRO_1' | translate }}
+      <em>Bilateral</em>
+      {{ 'BILATERAL_VIEW_INTRO_2' | translate }}
     </p>
     <!-- <bilateral-title>  </bilateral-title> -->
     <h4>
