--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -35,7 +35,9 @@
   </br>
   </br>
   <p class="paragraphPage">
-      {{ 'COUNTRY_VIEW_DUAL' | translate }}
+      {{ 'COUNTRY_VIEW_DUAL_1' | translate }}
+      <em>Country</em>
+      {{ 'COUNTRY_VIEW_DUAL_2' | translate }}
   </p>
   <div class="row timeline-cont" >
     <div class="col-md-12">
