--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -53,7 +53,16 @@
             </div>
             <div class="col-xs-6 col-md-6 workingPaper">
               <h4>Historical Methods</h4>
-              <a href="http://ricardo.medialab.Sciences-po.fr/Dedinger_Girard_RICardo_HistoricalMethods.pdf">Working paper historical methods (en) </a>
+              Working paper Historical Methods (en) 
+              <ul>
+                <li>
+                  <a href="http://ricardo.medialab.Sciences-po.fr/Dedinger_Girard_RICardo_HistoricalMethods.pdf">Submitted to Historical Methods: 15-Dec-2015</a>
+                </li>
+                <li>
+                  <a href="http://ricardo.medialab.Sciences-po.fr/Dedinger_Girard_RICardo_HistoricalMethods.pdf">Revised version submitted: 01-May-2016</a>
+                </li> 
+              </ul>
+              
             </div>
           </div>
 
@@ -141,7 +150,7 @@
                   </p>
                   <p class="slPara">
                     {{ 'MIRROR_FLOWS_2' | translate}}
-                    <a href="http://ricardo.medialab.Sciences-po.fr/Dedinger_Girard_RICardo_HistoricalMethods.pdf"> historical methods (en) </a>. 
+                    <a href="http://ricardo.medialab.Sciences-po.fr/Dedinger_Girard_RICardo_HistoricalMethods.pdf"> Historical Methods (en) </a>. 
                   </p>
                   <p class="slPara">
                     {{ 'MIRROR_FLOWS_3' | translate}}
