--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -2,7 +2,7 @@
     </br>
     </br>
     <p class="paragraphPage">
-     {{ 'WORLD_VIEW_INTRO' | translate }}
+     {{ 'WORLD_VIEW_INTRO_1' | translate }}<em>World</em>{{ 'WORLD_VIEW_INTRO_2' | translate }}
     </p>
 
     <div class="col-sm-12">
@@ -168,7 +168,7 @@
       </h4>
         <p class="paragraphViz">
           {{ 'WORLD_LINES_1' | translate }} 
-          <a href="" ng-click="goTo('/#worldTrade')">World trade / Total trade</a> {{ 'WORLD_LINES_2' | translate }} <a href="" ng-click="goTo('/#worldTrade')">World best guess</a>
+          <a href="" ng-click="goTo('/#worldTrade')">{{'WORLD_TRADE' | translate}}</a> {{ 'WORLD_LINES_2' | translate }} <a href="" ng-click="goTo('/#worldTrade')">World best guess</a>
         </p>
         <!-- <div ng-show="messagePercent">
          <p>
