revised paper link need to be uploaded online

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -53,13 +53,13 @@
             </div>
             <div class="col-xs-6 col-md-6 workingPaper">
               <h4>Historical Methods</h4>
-              Working paper Historical Methods (en) 
+              Working Paper Historical Methods (en) 
               <ul>
                 <li>
                   <a href="http://ricardo.medialab.Sciences-po.fr/Dedinger_Girard_RICardo_HistoricalMethods.pdf">Submitted to Historical Methods: 15-Dec-2015</a>
                 </li>
                 <li>
-                  <a href="http://ricardo.medialab.Sciences-po.fr/Dedinger_Girard_RICardo_HistoricalMethods.pdf">Revised version submitted: 01-May-2016</a>
+                  <a href="http://ricardo.medialab.Sciences-po.fr/Dedinger_Girard_RICardo_HistoricalMethods_revised.pdf">Revised version submitted: 01-May-2016</a>
                 </li> 
               </ul>
               
