--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -111,7 +111,7 @@
                 <div class="slInfo">
                   <h5 class="slTitle">World trade / Total trade</h5>
                   <p class="slPara"> 
-                    {{ 'WORLD_TRADE' | translate }}
+                    {{ 'WORLD_TRADE_INTRO' | translate }}
                   </p>
                     <ul>
                       <li  class="slPara">
