country view minor change

--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -72,7 +72,7 @@
           <div class="line unavailable"></div> {{ 'UNAVAILABLE' | translate }}
         </div>
         <div class="legend-item">
-          {{ 'CURRENCY' | translate }} <strong>{{actualCurrency}}</strong>
+          {{ 'CURRENCY' | translate }} <strong>pound sterling</strong>
         </div>
       </div>
     </div>
