--- a/css/theme/black.css
+++ b/css/theme/black.css
@@ -45,21 +45,21 @@ body {
   font-weight: 600;
   line-height: 1.2;
   letter-spacing: normal;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
   text-shadow: none;
   word-wrap: break-word; }
 
 .reveal h1 {
-  font-size: 2.5em; }
+  font-size: 1.5em; }
 
 .reveal h2 {
-  font-size: 1.6em; }
+  font-size: 1em; }
 
 .reveal h3 {
-  font-size: 1.3em; }
+  font-size: 0.8em; }
 
 .reveal h4 {
-  font-size: 1em; }
+  font-size: 0.5em; }
 
 .reveal h1 {
   text-shadow: none; }
@@ -223,11 +223,11 @@ body {
 /*********************************************
  * IMAGES
  *********************************************/
-.reveal section img {
+/*.reveal section img {
   margin: 15px 0px;
   background: rgba(255, 255, 255, 0.12);
   border: 4px solid #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }*/
 
 .reveal section img.plain {
   border: 0;
